--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@ Company formation, accounting, certified translations, bank account opening, lic
   <div class="js-menu-overlay"></div>
 
   <script type="module" src="./main.js"></script>
-  <script src="/js/lang.js"></script>
+  <script src="/js/lang.js" defer></script>
 </body>
 
 </html>
