--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,11 @@ Company formation, accounting, certified translations, bank account opening, lic
 
   <div class="js-menu-overlay"></div>
 
-  <script type="module" src="./main.js"></script>
-  <script src="/js/lang.js" defer></script>
+  <script type="module" src="/lang-switch.js"></script>
+  <script type="module" src="/main.js"></script>
+  </body>
+
+
 </body>
 
 </html>
