--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="icon" type="image/png" href="./favicon.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services</title>
 
@@ -23,9 +24,10 @@ Company formation, accounting, certified translations, bank account opening, lic
 <body>
   <load src="partials/header.html" />
   <load src="partials/mobile-menu.html" />
-  <script src="https://unpkg.com/body-scroll-lock/lib/bodyScrollLock.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+  <script src="https://unpkg.com/body-scroll-lock/lib/bodyScrollLock.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
+
   
 
   <main>
@@ -40,8 +42,9 @@ Company formation, accounting, certified translations, bank account opening, lic
 
   <div class="js-menu-overlay"></div>
 
-  <script type="module" src="/lang-switch.js"></script>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./lang-switch.js"></script>
+  <script type="module" src="./main.js"></script>
+
   </body>
   
   </html>
