--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@ Company formation, accounting, certified translations, bank account opening, lic
 
  
   <script type="module" src="./main.js"></script>
+  <script type="module" src="/js/i18n.js"></script>
+  <script type="module" src="/js/lang-switcher.js"></script>
+
 
   </body>
   
