--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,11 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./main.js"></script>
   <script type="module" src="/js/i18n.js"></script>
   <script type="module" src="/js/lang-switcher.js"></script>
+<script>
+  (function () {
+    emailjs.init("-fxlEiaaEB8sP79Pk");
+  })();
+</script>
 
 
   </body>
