--- a/src/index.html
+++ b/src/index.html
@@ -43,14 +43,19 @@ Company formation, accounting, certified translations, bank account opening, lic
   <div class="js-menu-overlay"></div>
 
  
-  <script type="module" src="./main.js"></script>
-  <script type="module" src="/js/i18n.js"></script>
-  <script type="module" src="/js/lang-switcher.js"></script>
-<script>
-  (function () {
-    emailjs.init("-fxlEiaaEB8sP79Pk");
-  })();
-</script>
+  <!-- EmailJS CDN (ОБЯЗАТЕЛЬНО ПЕРВЫМ) -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  
+  <!-- Инициализация EmailJS -->
+  <script>
+    (function () {
+      emailjs.init("fxlEiaaEB8sP79Pk"); // ✅ ваш Public Key
+    })();
+  </script>
+  
+  <!-- Ваш скрипт с отправкой формы -->
+  <script src="./js/email.js"></script>
+
 
 
   </body>
