--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,10 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./js/i18n.js"></script>
   <script type="module" src="./js/lang-switcher.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+  <script src="./js/animation.js"></script>
+
+
 
 
   </body>
