--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,13 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./js/i18n.js"></script>
   <script type="module" src="./js/lang-switcher.js"></script>
 
+
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
-  <script src="./js/animation.js"></script>
-
-
-
+  <script src="/js/animation.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="/js/email.js"></script>
+  
 
   </body>
   
