--- a/src/index.html
+++ b/src/index.html
@@ -62,12 +62,15 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./js/lang-switcher.js"></script>
 
 
+  <!-- GSAP core -->
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+  
+  <!-- GSAP ScrollTrigger plugin -->
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
+  
+  <!-- ваш animation.js -->
   <script src="/js/animation.js"></script>
-  
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script src="/js/email.js"></script>
-  
+
 
   </body>
   
