--- a/src/index.html
+++ b/src/index.html
@@ -62,14 +62,14 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./js/lang-switcher.js"></script>
 
 
-  <!-- GSAP core -->
+  <!-- GSAP -->
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
   
-  <!-- GSAP ScrollTrigger plugin -->
+  <!-- ScrollTrigger -->
   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
   
-  <!-- ваш animation.js -->
-  <script src="/js/animation.js"></script>
+  <!-- ваш файл анимаций -->
+  <script src="./js/animation.js"></script>
 
 
   </body>
