--- a/src/index.html
+++ b/src/index.html
@@ -60,16 +60,13 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./js/i18n.js"></script>
   <script type="module" src="./js/lang-switcher.js"></script>
 
+<!-- EmailJS CDN -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
-  <!-- GSAP -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
-  
-  <!-- ScrollTrigger -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
-  
-  <!-- ваш файл анимаций -->
-  <script src="./js/animation.js"></script>
+<!-- Vite entry point -->
+<script type="module" src="./main.js"></script>
 
+  
 
   </body>
   
