--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,9 @@ Company formation, accounting, certified translations, bank account opening, lic
 <!-- Vite entry point -->
 <!-- <script type="module" src="./main.js"></script> -->
 
-  <script type="module" src="./lang-switch.js"></script>
-  <script type="module" src="./main.js"></script>
+<script type="module" src="./js/lang-switch.js"></script>
+<script type="module" src="./main.js"></script>
+
 
 
   </body>
