--- a/src/index.html
+++ b/src/index.html
@@ -56,18 +56,17 @@ Company formation, accounting, certified translations, bank account opening, lic
  
   
   <!-- остальное -->
-  <!-- <script type="module" src="./main.js"></script> -->
-  <!-- <script type="module" src="./js/i18n.js"></script> -->
-  <!-- <script type="module" src="./js/lang-switcher.js"></script> -->
-<!-- EmailJS CDN -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script> -->
-<!-- Vite entry point -->
-<!-- <script type="module" src="./main.js"></script> -->
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./js/i18n.js"></script>
+  <script type="module" src="./js/lang-switcher.js"></script>
 
-<script type="module" src="./js/lang-switch.js"></script>
+<!-- EmailJS CDN -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+<!-- Vite entry point -->
 <script type="module" src="./main.js"></script>
 
-
+  
 
   </body>
   
