--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@ Company formation, accounting, certified translations, bank account opening, lic
   <script type="module" src="./js/lang-switcher.js"></script>
 
 <!-- EmailJS CDN -->
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script> -->
 
 <!-- Vite entry point -->
 <script type="module" src="./main.js"></script>
