--- a/src/index.html
+++ b/src/index.html
@@ -55,15 +55,19 @@ Company formation, accounting, certified translations, bank account opening, lic
   
  
   
-  <!-- остальное -->
-  <script type="module" src="./main.js"></script>
-  <script type="module" src="./js/i18n.js"></script>
-  <script type="module" src="./js/lang-switcher.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
-<!-- EmailJS CDN -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script> -->
+<!-- i18next -->
+<script src="https://unpkg.com/i18next@23.10.1/i18next.min.js"></script>
 
-<!-- Vite entry point -->
+<!-- i18n init -->
+<script type="module" src="./js/i18n.js"></script>
+
+<!-- language switcher -->
+<script type="module" src="./js/lang-switcher.js"></script>
+
+<!-- main entry (ОДИН РАЗ!) -->
 <script type="module" src="./main.js"></script>
 
   
