--- a/src/index.html
+++ b/src/index.html
@@ -3,33 +3,49 @@
 
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="./favicon.png" />
 
+  <!-- Viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="./favicon.png" />
+
+  <!-- SEO -->
+  <title>Business Services in the Czech Republic | GreenFrog Office</title>
 
   <meta name="description"
-    content="Comprehensive Business and Personal Services in the Czech Republic
-Company formation, accounting, certified translations, bank account opening, licensing, legal support, and full administrative assistance." />
+    content="Comprehensive business services in the Czech Republic: company registration, accounting, certified translations, bank account opening, licensing and legal support." />
+
+  <meta name="keywords"
+    content="business services Czech Republic, company registration Czech Republic, accounting services Prague, certified translations Czech Republic, legal support Czech Republic" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Business Services in the Czech Republic | GreenFrog Office" />
+  <meta property="og:description"
+    content="Professional business services in the Czech Republic with full legal and administrative support." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://masenko2604.github.io/green-frog/" />
+  <meta property="og:image" content="https://masenko2604.github.io/green-frog/og-image.jpg" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400..700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/styles.css" />
-  <link rel="stylesheet" type="text/css"
+
+  <!-- Normalize -->
+  <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
+
+  <!-- Main styles -->
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
+  <!-- Header -->
   <load src="partials/header.html" />
   <load src="partials/mobile-menu.html" />
-  <script src="https://unpkg.com/body-scroll-lock/lib/bodyScrollLock.min.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
 
-  
-
+  <!-- Main content -->
   <main>
     <load src="partials/hero.html" />
     <load src="partials/about_us.html" />
@@ -38,43 +54,34 @@ Company formation, accounting, certified translations, bank account opening, lic
     <load src="partials/reviews.html" />
   </main>
 
-  <load src="./partials/footer.html" />
+  <!-- Footer -->
+  <load src="partials/footer.html" />
 
+  <!-- Overlay -->
   <div class="js-menu-overlay"></div>
 
- 
-  <!-- EmailJS library -->
+  <!-- Libraries -->
+  <script src="https://unpkg.com/body-scroll-lock/lib/bodyScrollLock.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+  <script src="https://unpkg.com/i18next@23.10.1/i18next.min.js"></script>
+
+  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  
-  <!-- Init EmailJS -->
   <script>
     (function () {
-      emailjs.init("-fxlEiaaEB8sP79Pk");
+      emailjs.init('-fxlEiaaEB8sP79Pk');
     })();
   </script>
-  
- 
-  
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
-<!-- i18next -->
-<script src="https://unpkg.com/i18next@23.10.1/i18next.min.js"></script>
+  <!-- App scripts -->
+  <script type="module" src="./js/i18n.js"></script>
+  <script type="module" src="./js/lang-switcher.js"></script>
+  <script type="module" src="./main.js"></script>
+</body>
 
-<!-- i18n init -->
-<script type="module" src="./js/i18n.js"></script>
+</html>
 
-<!-- language switcher -->
-<script type="module" src="./js/lang-switcher.js"></script>
-
-<!-- main entry (ОДИН РАЗ!) -->
-<script type="module" src="./main.js"></script>
-
-  
-
-  </body>
-  
-  </html>
 
 
 
