--- a/src/index.html
+++ b/src/index.html
@@ -86,12 +86,12 @@
     <script src="https://unpkg.com/i18next@23.10.1/i18next.min.js"></script>
 
     <!-- EmailJS -->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-    <script>
-      (function () {
+    <!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script> -->
+      <!-- (function () {
         emailjs.init('-fxlEiaaEB8sP79Pk');
       })();
-    </script>
+    </script> -->
 
     <!-- App scripts -->
     <script type="module" src="./js/i18n.js"></script>
